Fix grid gap rhytm

--- a/src/_styles/global.css
+++ b/src/_styles/global.css
@@ -112,7 +112,7 @@ nav ul li {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr min(60ch, calc(100% - (var(--space-2xs-xs) * 4))) 1fr 1fr;
-  gap: var(--space-2xs-xs);
+  gap: 0 var(--space-2xs-xs);
 
   container-type: inline-size;
 }
